Adjust swagger docs
